# QUINTE

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION.md  README.md  SKILL.md  install.ps1  install.sh  quinte-demo.sh  quinte-report.md  quinte.html
.codewhale/: instructions.md
.github/: release-history.txt
RASHOMON/: README.md  hermes-three-gates-report.html  hermes-three-gates-report.md  quinte-anti-drift-report.html  quinte-anti-drift-report.md  quinte-anti-drift-ruling.md  rashomon-framework.md
assets/: GROK_HANDOFF.md  QUINTE残差管理机制调优分析.md  QUINTE残差管理机制调优分析报告.html  RESIDUAL_REPORT_CORRECTIONS.md  WINDOWS_REAL_MACHINE_ACCEPTANCE.md  quinte.html
debates/: README.md
demo/: quinte-demo.sh
docs/: windows-powershell-development-log.md
examples/: brief.json
hermes-skill/: SKILL.md
references/: lessons.md  quinte-report.md  rashomon-framework.md
schemas/: brief.schema.json  dispatch-ledger.schema.json  dispatch-manifest.schema.json  hm-response.schema.json  lane-output.schema.json  primary-arbiter-response.schema.json  r3-input-receipt.schema.json  result.schema.json  run-event.schema.json  run-manifest.schema.json
scripts/: quinte-progress  quinte-run  release-guard.sh  test-release-guard.sh
skills/: SKILL.md
spec/: PROTOCOL.md  extensions.md
specs/: CLI.md  DISPATCH.md  PROTOCOL.md
src/: adapters.rs  brief.rs  cli.rs  completions.rs  contract.rs  credential.rs  doctor.rs  error.rs  lib.rs  main.rs  model.rs  policy.rs  repl.rs  run.rs  schema.rs  store.rs  ui.rs  util.rs  wolf.rs
tests/: adapters_direct_json.rs  cli_async.rs  cli_basics.rs  policy_compat.rs  policy_contract.rs  (+3 more)
(+53 files in other folders)
